--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <br><br>
 
         <label>Password:</label>
-        <input type="text" id="digits">
+        <input type="password" id="digits">
 
 <br><br>
 
